REP-567 fixes layout issues on home

--- a/save/webpages/mir-layout/scss/project_styles/_buttons.scss
+++ b/save/webpages/mir-layout/scss/project_styles/_buttons.scss
@@ -11,11 +11,19 @@
     border-color: #A9A9A9;
     color: #fff;
   }
-  .btn-default:hover, .btn-default:focus, .btn-default:active, .btn-default.active, .open > .dropdown-toggle.btn-default {
+  .btn-default:hover,
+  .btn-default:focus,
+  .btn-default:active,
+  .btn-default.active,
+  .show > .dropdown-toggle.btn-default {
     background-color: #797979;
     border-color: #797979;
   }
-  .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open > .dropdown-toggle.btn-primary {
+  .btn-primary:hover,
+  .btn-primary:focus,
+  .btn-primary:active,
+  .btn-primary.active,
+  .show > .dropdown-toggle.btn-primary {
     color: #FFF;
     background-color: #797979;
     border-color: #797979;
@@ -39,6 +47,16 @@
   }
   .btn-flat .fa-search {
       font-size: 20px;
+  }
+  .searchfield_box {
+    .btn-secondary {
+      &:hover,
+      &:focus,
+      &:active {
+        background-color: $intrGrey;
+        border-color: $white;
+      }
+    }
   }
 
 // Large devices (desktops) and below: <= 1200px
