--- a/save/webpages/mir-layout/scss/project_styles/_typography.scss
+++ b/save/webpages/mir-layout/scss/project_styles/_typography.scss
@@ -20,7 +20,10 @@ h1, .h1, h2, .h2, h3, .h3 {
   }
 
   h3 {
-    font-size: 1rem;
+    font-size: 24px;
+  }
+  h4 {
+    font-size: 18px;
   }
 
   h3 > a {
